# BlochBuster

./: .gitignore  BlochBuster.py  FFMPEGwriter.py  README.md  build_local_doc.sh  demo.bat  demo.py  environment.yml  pyproject.toml  readthedocs.yml
BlochBuster/: BlochBuster.py  FFMPEGwriter.py
RF/: exc_min_phase.yml  inv_secant.yml  ref.yml  spsp.yml
config/: FISP.txt  FLAIR.json  FLAIR.txt  FLAIR.yml  FSE.json  FSE.txt  FSE.yml  FSE_CPMG.json  FSE_CPMG.yml  Kooshball.yml  RandomPrecession.yml  RandomPrecessionRelaxation.yml  SE.json  SE.txt  SE.yml  SE_CP.txt  SE_CPMG.txt  SE_CPMG_nonideal.txt  SE_CP_nonideal.txt  SPGR.json  SPGR.txt  SPGR.yml  STIR.json  STIR.txt  STIR.yml  STIR_space.yml  SpEnc.yml  SpExc.yml  SpSp.yml  TOF.yml  binomial2.json  binomial2.txt  binomial2.yml  binomial7.json  binomial7.txt  binomial7.yml  diffusion.yml  example.yml  fatwater.json  fatwater.txt  (+5 more)
docs/: BlochBuster_api.rst  conf.py  index.rst  requirements.txt
