[tool.poetry]
name = "blochbuster"
version = "1.1.0"
description = "BlochBuster is a nuclear magnetic resonance Bloch equation simulator that creates animated plots."
authors = ["Johan Berglund <johan.berglund@akademiska.se>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/bretglun/BlochBuster"

[tool.poetry.dependencies]
python = ">=3.11"
scipy = "^1.16.1"
matplotlib = "^3.10.5"
pyyaml = "^6.0.2"
ffmpeg-python = "^0.2.0"
static-ffmpeg = "^2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
